Fixed gaps

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -111,7 +111,7 @@ $breakpoints: (
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
 
-	gap: $gap-sm;
+	gap: $gap-md;
 	padding: $padding-md;
 
 	@content;
